--- a/templates/index.html
+++ b/templates/index.html
@@ -7,33 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
- 	 <div class="container-fluid">
-    		<a class="navbar-brand" href="#">Timetable</a>
-    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      			<span class="navbar-toggler-icon"></span>
-   		 </button>
-    	 	<div class="collapse navbar-collapse" id="navbarNav">
-      			<ul class="navbar-nav">
-       			<li class="nav-item">
-        		  <a class="nav-link active" aria-current="page" href="#">Faculty List</a>
-      	 		</li>
-   	 		<li class="nav-item">
-        		  <a class="nav-link" href="#">Features</a>
-      	 		</li>
-       			<li class="nav-item">
-         			 <a class="nav-link" href="#">Pricing</a>
-       			 </li>
-       			<li class="nav-item">
-        			<a class="nav-link disabled" aria-disabled="true">Disabled</a>
-       			 </li>
-     			 </ul>
-   		 </div>
-	 </div>
-    </nav>
     <div class= "container-sm mt-4 " >
 	    <input id="query" type="text" placeholder="Enter Faculty Name : " class="form-control">
+	    <ol class="list-group list-group-numbered" id="content">
+      </ol>
     </div>
-    
+    <script src="/static/main.js"></script>
   </body>
 </html>
