Created a better ui for webpage and solved the problem of multiple xmlhttp requests

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome To Timetable</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="/static/main.css" rel="stylesheet"
   </head>
   <body>
-    <div class= "container-sm mt-4 " >
+    <div class= "container">
+      <h1>OXFORD</h1>
 	    <input id="query" type="text" placeholder="Enter Faculty Name : " class="form-control">
 	    <ol class="list-group list-group-numbered" id="content">
       </ol>
