--- a/static/main.css
+++ b/static/main.css
@@ -12,11 +12,13 @@ body{
   align-items:center;
   justify-content:center;
   background:#373737;
+  overflow-x:hidden;
 }
 .container{
   position:relative;
   width:100%;
-  max-width:50vw;
+  max-width:900px;
+  padding:2rem;
 }
 .container h1{
   text-align:center;
@@ -58,7 +60,17 @@ body{
   overflow:hidden;
   cursor:pointer;
   font-size:1.3rem;
+  text-decoration:none;
+  color:#BFBEBE;
+  display:block;
+  
 }
 .list-group-item:hover{
   background:#555555;
+}
+.flex{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  margin-bottom:10px;
 }
