imporoved working of API and added data for timetables

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome To Timetable</title>
-    <link href="/static/main.css" rel="stylesheet"
+    <link href="/static/main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/static/image.ico">
   </head>
   <body>
     <div class= "container">
