--- a/static/main.css
+++ b/static/main.css
@@ -6,7 +6,8 @@
 }
 
 body{
-  height:100vh;
+  height:100%;
+  min-height: 100vh;
   width:100vw;
   display:flex;
   align-items:center;
@@ -73,4 +74,87 @@ body{
   align-items:center;
   justify-content:space-between;
   margin-bottom:10px;
+}
+
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  cursor: default;
+  align-items: center;
+  justify-content: center;
+  display: none;
+  padding: 1rem;
+}
+.modal.active{
+  display: flex;
+}
+@keyframes popin{
+  0%{
+    transform: scale(0);
+  }
+  50%{
+    transform: scale(1.02);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+.modal-content{
+  background-color: #4F4E4E;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  color: #BFBEBE;
+  overflow: visible;
+  position: relative;
+}
+.modal.active .modal-content{
+  animation: popin 0.5s;
+}
+.modal-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.modal-header span{
+  display:block;
+  cursor: pointer;
+  /* font-size: 1.2rem; */
+  background: #3f3f3f;
+  padding: 1rem;
+  border-radius: 10px;
+}
+.modal-content table{
+  border: none;
+  border-radius: 1rem;
+  cursor: pointer;
+
+}
+.modal-content table tr{
+  padding: 1rem ;
+  background-color: #3f3f3f;
+  border-radius: 1rem;
+}
+.modal-content table tr.active{
+  padding: 1rem ;
+  box-shadow: -4px 8px 57px 29px rgba(0,0,0,0.6);
+  border: 1px solid #BFBEBE;
+  background-color: #3f3f3f;
+  margin-bottom: 1rem;
+  transform: scale(1.05);
+  z-index: 2;
+  position: relative;
+  cursor: pointer;
+}
+.modal-content table tr td{
+  padding: 1rem;
+  /* font-size: 1.5rem; */
+}
+.modal-content table tr td.active{
+  background-color: #5c5c5c;
 }
