--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,17 @@
 	    <ol class="list-group list-group-numbered" id="content">
       </ol>
     </div>
+    <div class="modal " id="popup">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 id="modal-title">Timetable for </h2>
+          <span id="close">Close</span>
+        </div>
+        <table id="table">
+          
+        </table>
+      </div>
+    </div>
     <script src="/static/main.js"></script>
   </body>
 </html>
