--- a/templates/add.html
+++ b/templates/add.html
@@ -18,6 +18,8 @@
             <div class="flex">
                 <h3>Faculty Name</h3>
                 <input type="text" name="t-name" placeholder="Enter Faculty Name" required>
+                <label for="check">Junior Teacher? </label>
+                <input type="checkbox" name="is_jr"  id="check">
             </div>
             <div class="flex">
                 <h3>Faculty Subject</h3>
