Added watermark for creators

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
         </table>
       </div>
     </div>
+    <footer>
+        <div class="creators" id="creators"></div>      
+    </footer>
     <script src="/static/main.js"></script>
   </body>
 </html>
