--- a/static/main.css
+++ b/static/main.css
@@ -20,6 +20,7 @@ body{
   min-height: 100vh;
   width:100vw;
   display:flex;
+  flex-direction: column;
   align-items:center;
   justify-content:center;
   background:var(--bg-color);
@@ -170,4 +171,21 @@ body{
 }
 .modal-content table tr td.active{
   background-color: var(--modal-bg-hover);
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: end;
+}
+footer .creators{
+  padding: 10px;
+  display: block;
+  text-align: end;
+  background-color: rgba(0,0,0,0.2);
+  cursor: pointer;
 }
